# image-triangulation

./: CMakeLists.txt  LICENSE  README
cmake/: BuildSrcFolderGenericLists.txt  FindANTTWEAKBAR.cmake  FindDirectX.cmake  FindEigen3.cmake  FindMatlab.cmake
demo/: CMakeLists.txt  D3D.cpp  D3D.h  Image2D.cpp  Image2D.h  ImmediateRenderer2D.cpp  ImmediateRenderer2D.h  MatlabInterface.cpp  MatlabInterface.hpp  Triangulator.cpp  Triangulator.hpp  UI.cpp  UI.h  main.cpp  math.hpp  stdafx.h
demo/Effects/: Brushing.fx  CMakeLists.txt  CopyToStaging.hlsl  DisplayTriangulation.fx  Image2DView.fx  ImmediateRenderer2D.fx  RasterizePlane.fx  RasterizeVariance.fx  SaturateTexture.hlsl  ShaderCommon.hlsl  SolvePlane.hlsl  UpdatePosition.hlsl
effect-framework/: CMakeLists.txt  Effect.h  EffectLoad.cpp  EffectNonRuntime.cpp  EffectReflection.cpp  EffectVariable.inl  READ_ME.txt  d3dxGlobal.cpp  d3dxGlobal.h  pchfx.h
matlab/: GetNeighbors.m  getRegularGrid.m  splitTriangles.m  updateTriangulationBasedOnMask.m
